1998-10-24  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* acgeneral.m4 (AC_LANG_FORTRAN77): Remove [] (i.e. the m4 quotes)
	since it was confusing the testsuite.  Also make `f77' the default
	for FC, otherwise the testsuite fails.

	* autoconf.texi (Fortran 77 Compiler Characteristics): Added new
	node documenting the new AC_F77_LIBRARY_LDFLAGS macro.

	* acspecific.m4 (AC_F77_LIBRARY_LDFLAGS): New macro to determine
	the linker flags (e.g. `-L' and `-l') for the Fortran 77 intrinsic
	and run-time libraries.

1998-10-24  Ben Elliston  <bje@cygnus.com>

	* acspecific.m4 (AC_FUNC_SELECT_ARGTYPES): New macro. Detects the
	types of formal arguments to select(). Contributed by Lars Hecking
	<lhecking@nmrc.ucc.ie>.

	* acconfig.h (SELECT_TYPE_ARG1): Add.
	(SELECT_TYPE_ARG234): Likewise.
	(SELECT_TYPE_ARG5): Likewise.

	* config.guess: Hide warnings emitted by the HP linker when
	generating a PA 2.0 object file. Contributed by Marcus Thiessel
	<marcus@xemacs.org>.
	
1998-10-20  Ben Elliston  <bje@cygnus.com>

	* acgeneral.m4 (AC_LANG_RESTORE): Fix a typo spotted by Noah
	Elliott <elliott@hera.llnl.gov>.

1998-10-09  Tom Tromey  <tromey@cygnus.com>

	* Makefile.in (autoconf.m4f): New target.
	(autoheader.m4f): Likewise.

1998-10-08  Ben Elliston  <bje@cygnus.com>

	* acgeneral.m4 (AC_TRY_LINK_FUNC): Fix macro ordering.

Sun Oct  4 21:57:20 1998  Tom Tromey  <tromey@cygnus.com>

	* autoconf.texi (Defining Symbols): Documented third argument to
	AC_DEFINE.
	* autoheader.m4 (AC_DEFINE_UNQUOTED): Generate `verbatim'
	assignment if third argument given.
	(AC_DEFINE): Likewise.
	* acgeneral.m4 (AC_DEFINE): Handle case where $# is 3.
	(AC_DEFINE_UNQUOTED): Likewise.
	* autoheader.sh: Echo $verbatim if not empty.

1998-10-03  Ben Elliston  <bje@cygnus.com>

	* acconfig.h (FC_NO_MINUS_C_MINUS_O): Add to complete the Fortran
	77 support.

	* README: Update bug reporting address. Include maintainer info.

1998-10-02  Ben Elliston  <bje@cygnus.com>
